--- a/package.json
+++ b/package.json
@@ -1,28 +1,18 @@
 {
-    "name": "verdaccio-pacman",
-    "version": "1.1.1",
+    "name": "verdaccio-pacadmin",
+    "version": "0.0.1",
     "description": "Verdaccio Middleware Plugin to manage tags and versions of packages",
     "license": "MIT",
-    "author": {
-        "name": "Patrick Klös",
-        "email": "pkloes@web.de"
-    },
-    "maintainers": [
-        {
-            "name": "Patrick Klös",
-            "email": "pkloes@web.de"
-        }
-    ],
     "engines": {
         "node": ">=12.0.0"
     },
     "bugs": {
-        "url": "https://github.com/PaddeK/verdaccio-pacman/issues"
+        "url": "https://github.com/PaddeK/verdaccio-pacadmin/issues"
     },
-    "homepage": "https://github.com/PaddeK/verdaccio-pacman",
+    "homepage": "https://github.com/PaddeK/verdaccio-pacadmin",
     "repository": {
         "type": "git",
-        "url": "https://github.com/PaddeK/verdaccio-pacman.git"
+        "url": "https://github.com/PaddeK/verdaccio-pacadmin.git"
     },
     "main": "index.js",
     "keywords": [
@@ -32,8 +22,9 @@
         "package manager"
     ],
     "dependencies": {
+        "body-parser": "^1.19.0",
         "cheerio": "^1.0.0-rc.3",
-        "zinggrid": "^1.2.2",
-        "body-parser": "^1.19.0"
+        "yaml": "^1.10.2",
+        "zinggrid": "^1.2.2"
     }
 }
