--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "verdaccio-pacman",
+    "name": "verdaccio-pacadmin",
     "version": "1.1.1",
     "description": "Verdaccio Middleware Plugin to manage tags and versions of packages",
     "license": "MIT",
@@ -17,12 +17,12 @@
         "node": ">=12.0.0"
     },
     "bugs": {
-        "url": "https://github.com/PaddeK/verdaccio-pacman/issues"
+        "url": "https://github.com/PaddeK/verdaccio-pacadmin/issues"
     },
-    "homepage": "https://github.com/PaddeK/verdaccio-pacman",
+    "homepage": "https://github.com/PaddeK/verdaccio-pacadmin",
     "repository": {
         "type": "git",
-        "url": "https://github.com/PaddeK/verdaccio-pacman.git"
+        "url": "https://github.com/PaddeK/verdaccio-pacadmin.git"
     },
     "main": "index.js",
     "keywords": [
